fixing sidebar alignment and close on click overlay

--- a/src/assets/style/index-desktop.scss
+++ b/src/assets/style/index-desktop.scss
@@ -126,7 +126,6 @@ html {
 
 .burger-grill {
   z-index: 1999;
-  pointer-events: none;
   position: fixed;
   margin: auto !important;
   width: 100% !important;
@@ -135,7 +134,7 @@ html {
   .menu-title {
     position: absolute;
     top: 32px;
-    left: 50px;
+    left: 60px;
     font-size: 18px;
 
   }
@@ -223,7 +222,7 @@ body::-webkit-scrollbar {
   opacity: 0;
   z-index: 2001;
   position: absolute;
-  left: 50px;
+  left: 60px;
   top: 0px;
   display: flex;
   flex-direction: column;
